- fix z-index

--- a/css/style.scss
+++ b/css/style.scss
@@ -999,6 +999,7 @@ footer {
         left: 1.5rem;
         width: 2.5rem;
         height: 2.5rem;
+        z-index: 1;
         filter: drop-shadow(0 1px 2px rgba(50, 50, 0, 0.25));
         svg {
             width: 100%;
